--- a/DynamicAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/DynamicAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,34 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:52:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:50:59</td>   <td>-68884</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&gt;&gt;LaunchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:52:02</td>   <td>-6196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&lt;&lt;LogOutApp</td> 
-<td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:52:02</td>   <td>-6196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&lt;&lt;LogOutApp</td> 
-<td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:52:02</td>   <td>-6196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&lt;&lt;LogOutApp</td> 
-<td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:51:50</td>   <td>-18114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&gt;&gt;LoginApp</td> 
-<td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:51:50</td>   <td>-18114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&gt;&gt;LoginApp</td> 
-<td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:51:50</td>   <td>-18114</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&gt;&gt;LoginApp</td> 
-<td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:52:09</td>   <td>473</td> <td title="&lt;&lt;BaseClass.closedatabase_connection()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&lt;&lt;closedatabase_connection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:52:09</td>   <td>418</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeexecutionMode()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&lt;&lt;closeexecutionMode</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="70f8a6">  <td>24/01/28 11:51:22</td>   <td>-46658</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.createLead()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">createLead</td> 
-  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="70f8a6">  <td>24/01/28 11:51:44</td>   <td>-24487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.createOpp()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">createOpp</td> 
-  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:50:59</td>   <td>-68923</td> <td title="&gt;&gt;BaseClass.database_connection()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&gt;&gt;database_connection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="b4fe8a">  <td>24/01/28 11:50:59</td>   <td>-68912</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.executionMode()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">&gt;&gt;executionMode</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1758008124</td>   <td></td> </tr>
-<tr bgcolor="70f8a6">  <td>24/01/28 11:52:02</td>   <td>-6202</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.vcreateContact()[pri:0, instance:JavaSelenium.ReleaseJan@4d154ccd]">vcreateContact</td> 
-  <td>main@1758008124</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:48:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:29</td>   <td>-32385</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&gt;&gt;LaunchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:56</td>   <td>-5286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&lt;&lt;LogOutApp</td> 
+<td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:56</td>   <td>-5286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&lt;&lt;LogOutApp</td> 
+<td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:56</td>   <td>-5286</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&lt;&lt;LogOutApp</td> 
+<td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:52</td>   <td>-8929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&gt;&gt;LoginApp</td> 
+<td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:52</td>   <td>-8929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&gt;&gt;LoginApp</td> 
+<td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:52</td>   <td>-8929</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&gt;&gt;LoginApp</td> 
+<td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:48:02</td>   <td>406</td> <td title="&lt;&lt;BaseClass.closedatabase_connection()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&lt;&lt;closedatabase_connection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:48:02</td>   <td>369</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeexecutionMode()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&lt;&lt;closeexecutionMode</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="61bef5">  <td>24/01/28 22:47:39</td>   <td>-22631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.createLead()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">createLead</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="61bef5">  <td>24/01/28 22:47:47</td>   <td>-13978</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.createOpp()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">createOpp</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:29</td>   <td>-32419</td> <td title="&gt;&gt;BaseClass.database_connection()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&gt;&gt;database_connection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="78b3da">  <td>24/01/28 22:47:29</td>   <td>-32405</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.executionMode()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">&gt;&gt;executionMode</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1823409783</td>   <td></td> </tr>
+<tr bgcolor="61bef5">  <td>24/01/28 22:47:56</td>   <td>-5294</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.vcreateContact()[pri:0, instance:JavaSelenium.ReleaseJan@f09733f]">vcreateContact</td> 
+  <td>main@1823409783</td>   <td></td> </tr>
 </table>
