Extent report listner

--- a/DynamicAutomation/test-output/old/Default suite/classes.html
+++ b/DynamicAutomation/test-output/old/Default suite/classes.html
@@ -11,15 +11,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createLead</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>vcreateContact</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>createOpp</td>
+<td>createContact</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
