--- a/DynamicAutomation/test-output/emailable-report.html
+++ b/DynamicAutomation/test-output/emailable-report.html
@@ -9,12 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">32,777</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">25,957</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">JavaSelenium.ReleaseJan</td><td><a href="#m0">createLead</a></td><td rowspan="1">1706462259158</td><td rowspan="1">14</td></tr><tr class="passedeven"><td><a href="#m1">createOpp</a></td><td rowspan="1">1706462267812</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m2">vcreateContact</a></td><td rowspan="1">1706462276495</td><td rowspan="1">5</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">JavaSelenium.ReleaseJan</td><td><a href="#m0">createContact</a></td><td rowspan="1">1706504607090</td><td rowspan="1">14051</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">JavaSelenium.ReleaseJan#createLead</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">JavaSelenium.ReleaseJan#createOpp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">JavaSelenium.ReleaseJan#vcreateContact</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">JavaSelenium.ReleaseJan#createContact</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
