--- a/DynamicAutomation/test-output/index.html
+++ b/DynamicAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse--802077431\testng-customsuite.xml</span>
+                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1309920109\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="JavaSelenium.ReleaseJan" class="method navigator-link" hash-for-method="createLead">createLead</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="JavaSelenium.ReleaseJan" class="method navigator-link" hash-for-method="createOpp">createOpp</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="JavaSelenium.ReleaseJan" class="method navigator-link" hash-for-method="vcreateContact">vcreateContact</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="JavaSelenium.ReleaseJan" class="method navigator-link" hash-for-method="createContact">createContact</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -137,23 +127,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createLead">
-                  </a> <!-- createLead -->
-                  <span class="method-name">createLead</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="createOpp">
-                  </a> <!-- createOpp -->
-                  <span class="method-name">createOpp</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="vcreateContact">
-                  </a> <!-- vcreateContact -->
-                  <span class="method-name">vcreateContact</span>
+                  <a name="createContact">
+                  </a> <!-- createContact -->
+                  <span class="method-name">createContact</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse--802077431\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1309920109\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +146,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;JavaSelenium.ReleaseJan&quot;/&gt;
+      &lt;class name=&quot;JavaSelenium.ReleaseJan&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;createContact&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- JavaSelenium.ReleaseJan --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,24 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'createLead')
+data.setCell(0, 1, 'createContact')
 data.setCell(0, 2, 'JavaSelenium.ReleaseJan')
-data.setCell(0, 3, 14);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'vcreateContact')
-data.setCell(1, 2, 'JavaSelenium.ReleaseJan')
-data.setCell(1, 3, 5);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'createOpp')
-data.setCell(2, 2, 'JavaSelenium.ReleaseJan')
-data.setCell(2, 3, 2);
+data.setCell(0, 3, 14051);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 21 ms</span>
+              <span class="suite-total-time">Total running time: 14 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -260,59 +232,35 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">executionMode</span>
-                <span class="method-start">20 ms</span>
+                <span class="method-start">641 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">LaunchBrowser</span>
-                <span class="method-start">40 ms</span>
+                <span class="method-start">660 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">LoginApp</span>
-                <span class="method-start">5174 ms</span>
+                <span class="method-start">5314 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">createLead</span>
-                <span class="method-start">9794 ms</span>
+                <span class="method-name">createContact</span>
+                <span class="method-start">9994 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">LogOutApp</span>
-                <span class="method-start">9822 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">LoginApp</span>
-                <span class="method-start">15078 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">createOpp</span>
-                <span class="method-start">18448 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">LogOutApp</span>
-                <span class="method-start">18458 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">LoginApp</span>
-                <span class="method-start">23496 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">vcreateContact</span>
-                <span class="method-start">27131 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">LogOutApp</span>
-                <span class="method-start">27139 ms</span>
+                <span class="method-start">24054 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">CloseBrowser</span>
-                <span class="method-start">32425 ms</span>
+                <span class="method-start">25559 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-test after">
                 <span class="method-name">closeexecutionMode</span>
-                <span class="method-start">32794 ms</span>
+                <span class="method-start">25976 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">closedatabase_connection</span>
-                <span class="method-start">32831 ms</span>
+                <span class="method-start">26557 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
