--- a/DynamicAutomation/test-output/index.html
+++ b/DynamicAutomation/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1309920109\testng-customsuite.xml</span>
+                    <span>C:\Users\Dell\AppData\Local\Temp\testng-eclipse-539233954\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse--1309920109\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Dell\AppData\Local\Temp\testng-eclipse-539233954\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;JavaSelenium.ReleaseJan&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;createContact&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- JavaSelenium.ReleaseJan --&gt;
+      &lt;class name=&quot;JavaSelenium.ReleaseJan&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -194,7 +190,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createContact')
 data.setCell(0, 2, 'JavaSelenium.ReleaseJan')
-data.setCell(0, 3, 14051);
+data.setCell(0, 3, 14240);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -232,35 +228,35 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">executionMode</span>
-                <span class="method-start">641 ms</span>
+                <span class="method-start">601 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">LaunchBrowser</span>
-                <span class="method-start">660 ms</span>
+                <span class="method-start">630 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">LoginApp</span>
-                <span class="method-start">5314 ms</span>
+                <span class="method-start">5076 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">createContact</span>
-                <span class="method-start">9994 ms</span>
+                <span class="method-start">9905 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">LogOutApp</span>
-                <span class="method-start">24054 ms</span>
+                <span class="method-start">24156 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">CloseBrowser</span>
-                <span class="method-start">25559 ms</span>
+                <span class="method-start">25672 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-test after">
                 <span class="method-name">closeexecutionMode</span>
-                <span class="method-start">25976 ms</span>
+                <span class="method-start">26009 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">closedatabase_connection</span>
-                <span class="method-start">26557 ms</span>
+                <span class="method-start">26643 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
