--- a/DynamicAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/DynamicAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8bd0de">  <td>24/01/29 10:33:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>24/01/29 10:33:17</td>   <td>-24899</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">&gt;&gt;LaunchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>24/01/29 10:33:41</td>   <td>-1504</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">&lt;&lt;LogOutApp</td> 
-<td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>24/01/29 10:33:22</td>   <td>-20245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">&gt;&gt;LoginApp</td> 
-<td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>24/01/29 10:33:43</td>   <td>999</td> <td title="&lt;&lt;BaseClass.closedatabase_connection()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">&lt;&lt;closedatabase_connection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>24/01/29 10:33:43</td>   <td>418</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeexecutionMode()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">&lt;&lt;closeexecutionMode</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="a3a2be">  <td>24/01/29 10:33:27</td>   <td>-15565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.createContact()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">createContact</td> 
-  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>24/01/29 10:33:17</td>   <td>-25548</td> <td title="&gt;&gt;BaseClass.database_connection()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">&gt;&gt;database_connection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
-<tr bgcolor="8bd0de">  <td>24/01/29 10:33:17</td>   <td>-24917</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.executionMode()[pri:0, instance:JavaSelenium.ReleaseJan@3c77d488]">&gt;&gt;executionMode</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>24/01/30 11:04:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>24/01/30 11:04:27</td>   <td>-25041</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">&gt;&gt;LaunchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>24/01/30 11:04:50</td>   <td>-1514</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">&lt;&lt;LogOutApp</td> 
+<td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>24/01/30 11:04:31</td>   <td>-20595</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">&gt;&gt;LoginApp</td> 
+<td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>24/01/30 11:04:53</td>   <td>972</td> <td title="&lt;&lt;BaseClass.closedatabase_connection()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">&lt;&lt;closedatabase_connection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>24/01/30 11:04:52</td>   <td>338</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeexecutionMode()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">&lt;&lt;closeexecutionMode</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="8bd0de">  <td>24/01/30 11:04:36</td>   <td>-15767</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.createContact()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">createContact</td> 
+  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>24/01/30 11:04:26</td>   <td>-25665</td> <td title="&gt;&gt;BaseClass.database_connection()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">&gt;&gt;database_connection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
+<tr bgcolor="7ab887">  <td>24/01/30 11:04:27</td>   <td>-25069</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.executionMode()[pri:0, instance:JavaSelenium.ReleaseJan@534a5a98]">&gt;&gt;executionMode</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@889891977</td>   <td></td> </tr>
 </table>
