--- a/DynamicAutomation/test-output/old/Default suite/classes.html
+++ b/DynamicAutomation/test-output/old/Default suite/classes.html
@@ -4,41 +4,25 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>JavaSelenium.ReleaseJan</td>
+<td>SelfAutomationScenariosPractice.ScrollScenarios</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createContact</td>
+<td>scrollUpAndDown</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>LaunchBrowser</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>LoginApp</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
-<td>&nbsp;</td>
-<td>LogOutApp</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>CloseBrowser</td>
-<td>&nbsp;</td></tr>
 </table>
