Batch , groups , parallel executions xml file created and update

--- a/DynamicAutomation/test-output/old/Default suite/classes.html
+++ b/DynamicAutomation/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>JavaSelenium.ReleaseJan</td>
+<td>JavaSelenium.CreateContactWithDataproviderTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>createContactAndValidate</td>
+<td>createContactWithDifferentSetsOfData</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
