--- a/DynamicAutomation/test-output/old/Default suite/methods.html
+++ b/DynamicAutomation/test-output/old/Default suite/methods.html
@@ -1,22 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9717e">  <td>24/02/22 09:40:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">&gt;&gt;LaunchBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>24/02/22 09:40:47</td>   <td>22581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">&lt;&lt;LogOutApp</td> 
-<td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>24/02/22 09:40:49</td>   <td>24385</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeexecutionMode()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">&lt;&lt;closeexecutionMode</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>24/02/22 09:40:24</td>   <td>-24</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.executionMode()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">&gt;&gt;executionMode</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="ada98c">  <td>24/02/22 09:40:34</td>   <td>9511</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReleaseJan.createContactAndValidate()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">createContactAndValidate</td> 
-  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>24/02/22 09:40:48</td>   <td>24012</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseBrowser()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>24/02/22 09:40:24</td>   <td>-650</td> <td title="&gt;&gt;BaseClass.database_connection()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">&gt;&gt;database_connection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>24/02/22 09:40:29</td>   <td>4742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">&gt;&gt;LoginApp</td> 
-<td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
-<tr bgcolor="a9717e">  <td>24/02/22 09:40:49</td>   <td>25058</td> <td title="&lt;&lt;BaseClass.closedatabase_connection()[pri:0, instance:JavaSelenium.ReleaseJan@4a83a74a]">&lt;&lt;closedatabase_connection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1107412069</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:30:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LaunchBrowser()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&gt;&gt;LaunchBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>24/02/26 09:31:36</td>   <td>46599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithDataproviderTest.createContactWithDifferentSetsOfData(java.lang.String,java.lang.String)[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">createContactWithDifferentSetsOfData</td> 
+  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:33</td>   <td>43335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&gt;&gt;LoginApp</td> 
+<td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:50</td>   <td>61090</td> <td>&nbsp;</td><td title="&lt;&lt;BaseClass.closeexecutionMode()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&lt;&lt;closeexecutionMode</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:48</td>   <td>59211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&lt;&lt;LogOutApp</td> 
+<td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:50</td>   <td>60713</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.CloseBrowser()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&lt;&lt;CloseBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>24/02/26 09:31:36</td>   <td>46599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithDataproviderTest.createContactWithDifferentSetsOfData(java.lang.String,java.lang.String)[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">createContactWithDifferentSetsOfData</td> 
+  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:30:49</td>   <td>-22</td> <td>&nbsp;</td><td title="&gt;&gt;BaseClass.executionMode()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&gt;&gt;executionMode</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:33</td>   <td>43335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&gt;&gt;LoginApp</td> 
+<td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:51</td>   <td>61721</td> <td title="&lt;&lt;BaseClass.closedatabase_connection()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&lt;&lt;closedatabase_connection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:48</td>   <td>59211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&lt;&lt;LogOutApp</td> 
+<td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:30:49</td>   <td>-620</td> <td title="&gt;&gt;BaseClass.database_connection()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&gt;&gt;database_connection</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="9d8174">  <td>24/02/26 09:31:36</td>   <td>46599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContactWithDataproviderTest.createContactWithDifferentSetsOfData(java.lang.String,java.lang.String)[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">createContactWithDifferentSetsOfData</td> 
+  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:33</td>   <td>43335</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.LoginApp()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&gt;&gt;LoginApp</td> 
+<td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
+<tr bgcolor="f5696e">  <td>24/02/26 09:31:48</td>   <td>59211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.LogOutApp()[pri:0, instance:JavaSelenium.CreateContactWithDataproviderTest@909217e]">&lt;&lt;LogOutApp</td> 
+<td>&nbsp;</td>  <td>main@1603177117</td>   <td></td> </tr>
 </table>
